cmake_minimum_required(VERSION 3.6)
project(project5)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -Wall -Werror -Wextra -pedantic -pedantic-errors -D_GLIBCXX_DEBUG")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR})

set(SOURCE_FILES
        DblStack.cpp
        DblStack.h
        reverse.cpp)

set(TEST_FILES
        DblStack.cpp
        DblStack.h
        test.cpp)

add_executable(project5 ${SOURCE_FILES})

add_executable(project5-test ${TEST_FILES})